Fix scrollbar CSS

--- a/src/components/TerminalOutput.css
+++ b/src/components/TerminalOutput.css
@@ -7,24 +7,24 @@
 }
 
 .terminalButtons {
-   position: absolute;
-   right: 0;
-   top: 0;
-   margin: 0;
-   padding: 0;
-   background: rgba(32, 33, 36, .6);
-   color: #fff;
+    position: absolute;
+    right: 0;
+    top: 0;
+    margin: 0;
+    padding: 0;
+    background: rgba(32, 33, 36, .6);
+    color: #fff;
 }
 
-.terminalButtons > button {
+.terminalButtons>button {
     color: #fff !important;
 }
 
-.terminalButtons > button.Mui-disabled {
+.terminalButtons>button.Mui-disabled {
     color: #aaa !important;
 }
 
-.terminalButtons > button.MuiButtonGroup-groupedTextHorizontal:not(:last-child) {
+.terminalButtons>button.MuiButtonGroup-groupedTextHorizontal:not(:last-child) {
     border-color: #777 !important;
 }
 
@@ -43,27 +43,27 @@
 }
 
 .codeContainer::-webkit-scrollbar {
-    width: '8px';
-    height: '8px';
+    width: 8px;
+    height: 8px;
 }
 
 .codeContainer::-webkit-scrollbar-track {
-    background: 'transparent';
-    border-radius: '4px';
+    background: transparent;
+    border-radius: 4px;
 }
 
 .codeContainer::-webkit-scrollbar-thumb {
-    background: '#555';
-    border-radius: '4px';
+    background: #555;
+    border-radius: 4px;
 }
 
 .codeContainer::-webkit-scrollbar-corner {
-    background: 'transparent';
-    border-radius: '4px';
+    background: transparent;
+    border-radius: 4px;
 }
 
 .codeContainer::-webkit-resizer {
-    display: 'none';
+    display: none;
 }
 
 
